[package]
name = "b0x"
version = "0.4.0"
authors = ["Artem Varaksa <aymfst@gmail.com>"]
description = "A simple CLI tool to display information about the provided input (integers or strings)."
exclude = ["img/*"]
homepage = "https://github.com/u32i64/b0x#readme"
repository = "https://github.com/u32i64/b0x"
readme = "README.md"
keywords = ["bin", "hex", "binary", "cli", "tool"]
categories = ["command-line-utilities", "science"]
license = "MIT"

[[bin]]
path = "src/bin/main.rs"
name = "b0x"

[dependencies]
clap = "~2.32.0"
colored = "~1.6.1"
unicode-segmentation = "~1.2.1"
primal = "0.2"
